--- a/playbooks/openstack/sample-inventory/group_vars/all.yml
+++ b/playbooks/openstack/sample-inventory/group_vars/all.yml
@@ -97,6 +97,7 @@ openshift_openstack_external_network_name: "public"
 #openshift_openstack_infra_image_name: "centos7"
 #openshift_openstack_cns_image_name: "centos7"
 #openshift_openstack_node_image_name: "centos7"
+#openshift_openstack_bm_node_image_name: "centos7"
 #openshift_openstack_lb_image_name: "centos7"
 #openshift_openstack_etcd_image_name: "centos7"
 openshift_openstack_default_image_name: "centos7"
@@ -105,6 +106,7 @@ openshift_openstack_num_masters: 1
 openshift_openstack_num_infra: 1
 openshift_openstack_num_cns: 0
 openshift_openstack_num_nodes: 2
+openshift_openstack_num_bm_nodes: 0
 
 # # Public IP Allocation
 # # - manage which node roles are allocated public IP addresses
@@ -122,6 +124,7 @@ openshift_openstack_num_nodes: 2
 #openshift_openstack_infra_flavor: "m1.medium"
 #openshift_openstack_cns_flavor: "m1.medium"
 #openshift_openstack_node_flavor: "m1.medium"
+#openshift_openstack_bm_node_flavor: "m1.medium.baremetal"
 #openshift_openstack_lb_flavor: "m1.medium"
 #openshift_openstack_etcd_flavor: "m1.medium"
 openshift_openstack_default_flavor: "m1.medium"
